--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,10 @@
             <scope>compile</scope>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
 </project>
