--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
         <groupId>net.dv8tion</groupId>
